// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SafeZoneArea updateSVGs updates SVGs 1`] = `
<svg
  aria-hidden="true"
  class=""
  style="width: 200px; height: 300px; transform: translate(0px, 200px);"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    class=""
    clip-path="url(#fui-1)"
    d="M 9 -190 200 300 200 0 z"
  />
  <clippath
    id="fui-1"
  >
    <path
      d="M 0 0 0 100 100 100 100 150 0 150 0 300 200 300 200 0 z"
    />
  </clippath>
  <path
    class=""
    d="M 0 0 0 100 100 100 100 150 0 150 0 300 200 300 200 0 z"
  />
</svg>
`;

exports[`SafeZoneArea updateSVGs updates SVGs 2`] = `
<svg
  aria-hidden="true"
  class=""
  style="width: 200px; height: 300px; transform: translate(400px, 200px);"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    class=""
    clip-path="url(#fui-2)"
    d="M -100 310 0 300 0 0 z"
  />
  <clippath
    id="fui-2"
  >
    <path
      d="M 0 0 0 300 200 300 200 150 100 150 100 100 200 100 200 0 z"
    />
  </clippath>
  <path
    class=""
    d="M 0 0 0 300 200 300 200 150 100 150 100 100 200 100 200 0 z"
  />
</svg>
`;

exports[`SafeZoneArea updateSVGs updates SVGs 3`] = `
<svg
  aria-hidden="true"
  class=""
  style="width: 200px; height: 200px; transform: translate(200px, 0px);"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    class=""
    clip-path="url(#fui-3)"
    d="M 200 200 -190 315 0 200 z"
  />
  <clippath
    id="fui-3"
  >
    <path
      d="M 0 0 0 200 200 200 200 0 200 0 200 50 100 50 100 0 z"
    />
  </clippath>
  <path
    class=""
    d="M 0 0 0 200 200 200 200 0 200 0 200 50 100 50 100 0 z"
  />
</svg>
`;

exports[`SafeZoneArea updateSVGs updates SVGs 4`] = `
<svg
  aria-hidden="true"
  class=""
  style="width: 200px; height: 150px; transform: translate(200px, 300px);"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    class=""
    clip-path="url(#fui-4)"
    d="M 200 0 210 100 0 0 z"
  />
  <clippath
    id="fui-4"
  >
    <path
      d="M 0 0 0 150 100 150 100 100 200 100 200 150 200 150 200 0 z"
    />
  </clippath>
  <path
    class=""
    d="M 0 0 0 150 100 150 100 100 200 100 200 150 200 150 200 0 z"
  />
</svg>
`;
